add register api

--- a/docs/开发流程管理.md
+++ b/docs/开发流程管理.md
@@ -12,6 +12,8 @@
     - 技术选型为FastAPI
     - 数据库使用SQLite
     - 项目采用router -> service -> model 三层架构
+- 后端接口开发
+    - 添加注册api `/register`
 
 
 ## 2.2 张晓行开发记录
